styles.css
:root {
    --nav-color: #45A29E;
    --text-color: #F8F7F9;
    --bg-color: #1d2833;
}

body {
    background-color: var(--bg-color);
    font-family: 'Bebas Neue', sans-serif;
    color: var(--text-color);
}

.navbar {
    margin-bottom: 30px;
    background-color: var(--nav-color);
}

.navbar .navbar-brand {
    font-size: 2rem;
}

#form {
    position: relative;
    padding-top: 100px;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50%;
    height: 175px;
}

.form-control {
    background-color: var(--blue);
    border-radius: 50px 0 0 50px;
    border-color: var(--nav-color);
    font-size: 20px;
    color: var(--text-color);
    padding-left: 30px;
}

.form-control::placeholder {
    color: white;
    opacity: 1; 
}

.btn {
    background-color: var(--blue);
    color: var(--text-color);
    border-radius: 0 50px 50px 0;
    border-color: var(--nav-color);
    padding-right: 25px;
    display: flex;
    align-items: center;
}

.btn:hover {
    background-color: var(--nav-color);
}

.movie {
    padding: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.movie .movie-img img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
    border-radius: 25px;
    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.8));
}

.movie .movie-info {
    width: 100%;
    font-size: 2rem;
}

.movie .score {
    width: 25%;
    padding-bottom: 24%;
    border-radius: 50%;
    background-color: var(--bg-color);
    border: 2px solid var(--nav-color);
    position: relative;
    margin-left: 15px;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    transform: translate(0, -50%);
    margin-bottom: -10%;
}

.movie .score h3 {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.movie .movie-title {
    text-align: center;
}

@media (max-width: 1200px) {
    .navbar .navbar-brand {
        font-size: 4rem;
    }
    #form {
        margin-top: 100px;
        width: 70%;
        height: 200px;
    }
    .form-control {
        font-size: 40px;
    }
    .movie .movie-info h3 {
        font-size: 4rem;
        width: 500px;
    }
}

/* Scrollbar styling */
::-webkit-scrollbar {
    width: 15px;
}
::-webkit-scrollbar-track-piece {
    background-color: transparent;
}
::-webkit-scrollbar-thumb {
    background: var(--nav-color);
}

